# agent-config-snapshot-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh.md  pyproject.toml  snapshot-config.example.yaml
.github/workflows/: test.yml
presets/: claude-code.yaml  hermes.yaml  openclaw.yaml
src/agent_config_snapshot_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/agent_snapshot/: __init__.py  __main__.py  cli.py  compat.py  config.py  server.py  snapshot.py  watcher.py
src/agent_snapshot/presets/: claude-code.yaml  codex.yaml  gemini.yaml  hermes.yaml
tests/: test_cli.py  test_compat.py  test_config.py  test_server.py  test_snapshot.py  test_watcher.py
